@@ -1,3 +1,4 @@
+* Add range selection with Shift-click
 * Display unread and total of notes
 * Use resources method
 * Reduce offset when no search result
